--- a/curso/assets/mobirise/css/mbr-additional.css
+++ b/curso/assets/mobirise/css/mbr-additional.css
@@ -92,15 +92,12 @@ body {
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
+  padding: 1rem 3rem;
+  border-radius: 3px;
   display: inline-flex;
   align-items: center;
   justify-content: center;
   word-break: break-word;
-  -webkit-align-items: center;
-  -webkit-justify-content: center;
-  display: -webkit-inline-flex;
-  padding: 1rem 3rem;
-  border-radius: 3px;
 }
 .btn-sm {
   font-weight: 500;
@@ -611,7 +608,6 @@ a:hover {
   left: 30%;
   bottom: 30%;
   transform: rotate(135deg);
-  -webkit-transform: rotate(135deg);
 }
 /* Others*/
 .note-check a[data-value=Rubik] {
@@ -652,7 +648,6 @@ a:hover {
   position: absolute;
   transform: rotate(45deg);
   width: 14px;
-  -webkit-transform: rotate(45deg);
 }
 .form-control {
   background-color: #f5f5f5;
@@ -714,7 +709,6 @@ pre {
 }
 .mbr-section__comments .row {
   justify-content: center;
-  -webkit-justify-content: center;
 }
 /* Forms */
 .mbr-form .btn {
@@ -1166,7 +1160,10 @@ pre {
     align-items: center;
   }
   .navbar-toggleable-sm .navbar-collapse {
-    display: none;
+    display: -webkit-box !important;
+    display: -webkit-flex !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
     width: 100%;
   }
   .navbar-toggleable-sm .navbar-toggler {
@@ -1354,7 +1351,6 @@ pre {
 }
 .menu .navbar.collapsed:not(.beta-menu) {
   flex-direction: column;
-  -webkit-flex-direction: column;
 }
 .carousel-item.active,
 .carousel-item-next,
@@ -1375,11 +1371,6 @@ body {
 }
 .dropup .dropdown-toggle::after {
   display: none;
-}
-@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-  .card-wrapper {
-    flex: auto!important;
-  }
 }
 .cid-rGc9KXgnyY {
   padding-top: 45px;
@@ -1673,166 +1664,64 @@ body {
     width: 100% !important;
   }
 }
-.cid-rGc6Phjsud {
+.cid-rLI9KCrFjy {
   padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: #072116;
+  padding-bottom: 90px;
+  background-color: #ffffff;
 }
-.cid-rGc6Phjsud .mbr-section-btn > * {
-  margin: 0;
+.cid-rLI9KCrFjy .list-group-item {
+  padding: .75rem 3.25rem;
 }
-.cid-rGc6Phjsud h4 {
-  font-weight: 500;
-}
-.cid-rGc6Phjsud p {
-  color: #232323;
-}
-.cid-rGc6Phjsud .aside-content {
-  -webkit-flex-basis: 100%;
-  flex-basis: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.cid-rGc6Phjsud .block-content {
-  display: -webkit-flex;
-  flex-direction: column;
-  -webkit-flex-direction: column;
+.cid-rLI9KCrFjy .plan {
   word-break: break-word;
-}
-.cid-rGc6Phjsud .media {
-  margin: initial;
-  align-items: center;
-  -webkit-align-items: center;
-}
-.cid-rGc6Phjsud .mbr-figure {
-  align-self: flex-start;
-  -webkit-align-self: flex-start;
-  -webkit-flex-shrink: 0;
-  flex-shrink: 0;
-}
-.cid-rGc6Phjsud .card-img {
-  padding-right: 2rem;
-  width: auto;
-}
-.cid-rGc6Phjsud .card-img span {
-  font-size: 72px;
-  color: #707070;
-}
-@media (min-width: 992px) {
-  .cid-rGc6Phjsud .mbr-figure {
-    padding-right: 4rem;
-  }
-}
-@media (max-width: 991px) {
-  .cid-rGc6Phjsud .mbr-figure {
-    padding-right: 0;
-    padding-bottom: 1rem;
-    margin-bottom: 2rem;
-  }
-}
-@media (max-width: 300px) {
-  .cid-rGc6Phjsud .card-img span {
-    font-size: 40px !important;
-  }
-}
-.cid-rGc6Phjsud .cost {
-  text-decoration: line-through;
+  position: relative;
+  max-width: 300px;
+  padding-right: 0;
+  padding-left: 0;
   color: #767676;
 }
-.cid-rGc6Phjsud .text2 SPAN {
-  color: #cc2952;
+.cid-rLI9KCrFjy .plan .list-group-item {
+  position: relative;
+  -webkit-justify-content: center;
+  justify-content: center;
+  background-color: transparent;
+  border: 0;
 }
-.cid-rGc6Phjsud H2 {
-  color: #ffffff;
+.cid-rLI9KCrFjy .plan .list-group-item::after {
+  position: absolute;
+  bottom: 0;
+  left: 20%;
+  width: 60%;
+  height: 2px;
+  content: "";
+  background-color: #eaeaea;
 }
-.cid-rGc6Phjsud .text1 {
-  color: #ffffff;
+.cid-rLI9KCrFjy .plan .list-group-item:last-child::after {
+  display: none;
 }
-.cid-rGc6Phjsud .text2 {
-  color: #ffffff;
+.cid-rLI9KCrFjy .plan.favorite {
+  background-color: #fff;
+  box-shadow: 0 0 60px 0 rgba(0, 0, 0, 0.07);
 }
-.cid-rGc6QrKLFT {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: #072116;
+.cid-rLI9KCrFjy .plan-header {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
-.cid-rGc6QrKLFT .mbr-section-btn > * {
-  margin: 0;
-}
-.cid-rGc6QrKLFT h4 {
-  font-weight: 500;
-}
-.cid-rGc6QrKLFT p {
+.cid-rLI9KCrFjy .price-figure {
+  font-weight: 700;
   color: #232323;
 }
-.cid-rGc6QrKLFT .aside-content {
-  -webkit-flex-basis: 100%;
-  flex-basis: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+.cid-rLI9KCrFjy .price-value {
+  font-weight: 700;
+  vertical-align: top;
 }
-.cid-rGc6QrKLFT .block-content {
-  display: -webkit-flex;
-  flex-direction: column;
-  -webkit-flex-direction: column;
-  word-break: break-word;
-}
-.cid-rGc6QrKLFT .media {
-  margin: initial;
-  align-items: center;
-  -webkit-align-items: center;
-}
-.cid-rGc6QrKLFT .mbr-figure {
-  align-self: flex-start;
-  -webkit-align-self: flex-start;
-  -webkit-flex-shrink: 0;
-  flex-shrink: 0;
-}
-.cid-rGc6QrKLFT .card-img {
-  padding-right: 2rem;
-  width: auto;
-}
-.cid-rGc6QrKLFT .card-img span {
-  font-size: 72px;
-  color: #707070;
-}
-@media (min-width: 992px) {
-  .cid-rGc6QrKLFT .mbr-figure {
-    padding-right: 4rem;
+@media (max-width: 550px) {
+  .cid-rLI9KCrFjy .price-figure {
+    font-size: 4.25rem;
   }
-}
-@media (max-width: 991px) {
-  .cid-rGc6QrKLFT .mbr-figure {
-    padding-right: 0;
-    padding-bottom: 1rem;
-    margin-bottom: 2rem;
-  }
-}
-@media (max-width: 300px) {
-  .cid-rGc6QrKLFT .card-img span {
-    font-size: 40px !important;
-  }
-}
-.cid-rGc6QrKLFT .cost {
-  text-decoration: line-through;
-  color: #767676;
-}
-.cid-rGc6QrKLFT .text2 SPAN {
-  color: #cc2952;
-}
-.cid-rGc6QrKLFT .text2 {
-  color: #ffffff;
-}
-.cid-rGc6QrKLFT .text1 {
-  color: #ffffff;
-}
-.cid-rGc6QrKLFT H2 {
-  color: #ffffff;
 }
 .cid-r5QJ6G2YyD {
-  padding-top: 60px;
+  padding-top: 30px;
   padding-bottom: 60px;
   position: relative;
   background-color: #efefef;
