--- a/curso/assets/mobirise/css/mbr-additional.css
+++ b/curso/assets/mobirise/css/mbr-additional.css
@@ -1901,20 +1901,159 @@ body {
 .cid-qU8A7WgWjS .media-container-row .row-copirayt p {
   width: 100%;
 }
-.cid-ri7lZS3StU {
-  padding-top: 90px;
+.cid-rOagSv5Ixf {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-rOagSv5Ixf .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rOagSRuW8W {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rOagSRuW8W .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-rOagSRuW8W .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-rOagSRuW8W .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-rOagSRuW8W .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-rOagSRuW8W .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #554346;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+}
+.cid-rOagSRuW8W .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+  background: transparent !important;
+}
+.cid-rOagSRuW8W .mbr-gallery-item > div:hover:before {
+  opacity: 0.7 !important;
+}
+.cid-rOagSRuW8W .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  z-index: 2;
+}
+.cid-rOagSRuW8W .mbr-gallery-title:before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background: #554346 !important;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+  opacity: 0.7;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
+}
+.cid-rOagTAlnib {
+  padding-top: 45px;
   padding-bottom: 90px;
-  background: linear-gradient(45deg, #227f56, #227f56);
+  background-color: #efefef;
 }
-.cid-ri7lZS3StU .mbr-text,
-.cid-ri7lZS3StU .mbr-section-btn {
-  color: #ffffff;
+.cid-rOagTAlnib .mbr-section-subtitle {
+  color: #767676;
 }
-.cid-ri7lZS3StU H1 {
-  color: #232323;
+.cid-rOagTAlnib .mbr-text {
+  color: #767676;
 }
-.cid-ri7lZS3StU B {
-  color: #ffffff;
+.cid-rOagTAlnib .card {
+  display: flex;
+  position: relative;
+  justify-content: center;
+}
+.cid-rOagTAlnib .card-wrapper {
+  height: 100%;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-rOagTAlnib .card-wrapper .card-img {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.cid-rOagTAlnib .card-wrapper .card-img .mbr-overlay {
+  background-color: #efefef;
+  display: none;
+  transition: opacity .3s;
+}
+.cid-rOagTAlnib .card-wrapper .card-img .mbr-section-btn {
+  display: flex;
+  position: absolute;
+  transition: opacity .3s;
+  width: 100%;
+  margin: auto;
+  left: 0;
+  justify-content: center;
+  align-items: center;
+}
+.cid-rOagTAlnib .card-wrapper .card-img img {
+  width: 100%;
+  height: 100%;
+}
+.cid-rOagTAlnib .card-wrapper .card-box {
+  background-color: #ffffff;
+  padding: 0 2rem 2rem 2rem;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.cid-rOagTAlnib .card-wrapper .card-box h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  padding-top: 2rem;
+}
+.cid-rOagTAlnib .card-wrapper .card-box p {
+  margin-bottom: 0;
+  padding-top: 1.5rem;
+}
+.cid-rOagTAlnib .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+.cid-rOagTAlnib .popup-btn .mbr-overlay {
+  display: block !important;
+  opacity: 0;
+}
+.cid-rOagTAlnib .popup-btn .mbr-section-btn {
+  height: 100%;
+  display: flex !important;
+  opacity: 0;
+}
+.cid-rOagTAlnib .popup-btn:hover .mbr-overlay {
+  opacity: .5;
+}
+.cid-rOagTAlnib .popup-btn:hover .mbr-section-btn {
+  opacity: 1;
 }
 .cid-ri7ohx3Vin {
   padding-top: 90px;
@@ -1997,20 +2136,159 @@ body {
 .cid-ri7lyA8S6M .media-container-row .row-copirayt p {
   width: 100%;
 }
-.cid-ri7n7bmAGw {
-  padding-top: 90px;
+.cid-rO9LGfiykM {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-rO9LGfiykM .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rO9E5GJ3AQ {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rO9E5GJ3AQ .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-rO9E5GJ3AQ .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-rO9E5GJ3AQ .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-rO9E5GJ3AQ .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-rO9E5GJ3AQ .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #554346;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+}
+.cid-rO9E5GJ3AQ .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+  background: transparent !important;
+}
+.cid-rO9E5GJ3AQ .mbr-gallery-item > div:hover:before {
+  opacity: 0.7 !important;
+}
+.cid-rO9E5GJ3AQ .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  z-index: 2;
+}
+.cid-rO9E5GJ3AQ .mbr-gallery-title:before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background: #554346 !important;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+  opacity: 0.7;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
+}
+.cid-rO9IfyyLXV {
+  padding-top: 45px;
   padding-bottom: 90px;
-  background: linear-gradient(45deg, #227f56, #227f56);
+  background-color: #efefef;
 }
-.cid-ri7n7bmAGw .mbr-text,
-.cid-ri7n7bmAGw .mbr-section-btn {
-  color: #ffffff;
+.cid-rO9IfyyLXV .mbr-section-subtitle {
+  color: #767676;
 }
-.cid-ri7n7bmAGw H1 {
-  color: #232323;
+.cid-rO9IfyyLXV .mbr-text {
+  color: #767676;
 }
-.cid-ri7n7bmAGw B {
-  color: #ffffff;
+.cid-rO9IfyyLXV .card {
+  display: flex;
+  position: relative;
+  justify-content: center;
+}
+.cid-rO9IfyyLXV .card-wrapper {
+  height: 100%;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-rO9IfyyLXV .card-wrapper .card-img {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.cid-rO9IfyyLXV .card-wrapper .card-img .mbr-overlay {
+  background-color: #efefef;
+  display: none;
+  transition: opacity .3s;
+}
+.cid-rO9IfyyLXV .card-wrapper .card-img .mbr-section-btn {
+  display: flex;
+  position: absolute;
+  transition: opacity .3s;
+  width: 100%;
+  margin: auto;
+  left: 0;
+  justify-content: center;
+  align-items: center;
+}
+.cid-rO9IfyyLXV .card-wrapper .card-img img {
+  width: 100%;
+  height: 100%;
+}
+.cid-rO9IfyyLXV .card-wrapper .card-box {
+  background-color: #ffffff;
+  padding: 0 2rem 2rem 2rem;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.cid-rO9IfyyLXV .card-wrapper .card-box h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  padding-top: 2rem;
+}
+.cid-rO9IfyyLXV .card-wrapper .card-box p {
+  margin-bottom: 0;
+  padding-top: 1.5rem;
+}
+.cid-rO9IfyyLXV .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+.cid-rO9IfyyLXV .popup-btn .mbr-overlay {
+  display: block !important;
+  opacity: 0;
+}
+.cid-rO9IfyyLXV .popup-btn .mbr-section-btn {
+  height: 100%;
+  display: flex !important;
+  opacity: 0;
+}
+.cid-rO9IfyyLXV .popup-btn:hover .mbr-overlay {
+  opacity: .5;
+}
+.cid-rO9IfyyLXV .popup-btn:hover .mbr-section-btn {
+  opacity: 1;
 }
 .cid-ri7oLpli5f {
   padding-top: 90px;
