--- a/curso/assets/mobirise/css/mbr-additional.css
+++ b/curso/assets/mobirise/css/mbr-additional.css
@@ -1239,76 +1239,6 @@ section.lazy-placeholder:after {
 .cid-qU8A7WgWjS .media-container-row .row-copirayt p {
   width: 100%;
 }
-.cid-rOagSv5Ixf {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #ffffff;
-}
-.cid-rOagSv5Ixf .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-rOagSRuW8W {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-.cid-rOagSRuW8W .mbr-slider .carousel-control {
-  background: #1b1b1b;
-}
-.cid-rOagSRuW8W .mbr-slider .carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-rOagSRuW8W .mbr-slider .carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-rOagSRuW8W .mbr-slider .modal-body .close {
-  background: #1b1b1b;
-}
-.cid-rOagSRuW8W .mbr-gallery-item > div::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: #554346;
-  background: linear-gradient(to left, #554346, #45505b) !important;
-  opacity: 0;
-  -webkit-transition: 0.2s opacity ease-in-out;
-  transition: 0.2s opacity ease-in-out;
-}
-.cid-rOagSRuW8W .mbr-gallery-item > div:hover .mbr-gallery-title::before {
-  background: transparent !important;
-}
-.cid-rOagSRuW8W .mbr-gallery-item > div:hover:before {
-  opacity: 0.7 !important;
-}
-.cid-rOagSRuW8W .mbr-gallery-title {
-  font-size: .9em;
-  position: absolute;
-  display: block;
-  width: 100%;
-  bottom: 0;
-  padding: 1rem;
-  color: #fff;
-  z-index: 2;
-}
-.cid-rOagSRuW8W .mbr-gallery-title:before {
-  content: " ";
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  position: absolute;
-  background: #554346 !important;
-  background: linear-gradient(to left, #554346, #45505b) !important;
-  opacity: 0.7;
-  -webkit-transition: 0.2s background ease-in-out;
-  transition: 0.2s background ease-in-out;
-}
 .cid-rOagTAlnib {
   padding-top: 45px;
   padding-bottom: 90px;
@@ -1397,153 +1327,13 @@ section.lazy-placeholder:after {
 .cid-ri7ohx3Vin {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-color: #ffffff;
+  background-color: #efefef;
 }
 .cid-ri7ohx3Vin .mbr-section-subtitle {
   color: #767676;
 }
 .cid-ri7ohx3Vin .btn {
   margin: 0 0 .5rem 0;
-}
-.cid-ri7lyA8S6M {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: #2e2e2e;
-}
-.cid-ri7lyA8S6M .row-links {
-  width: 100%;
-  justify-content: center;
-}
-.cid-ri7lyA8S6M .social-row {
-  width: 100%;
-  justify-content: center;
-}
-.cid-ri7lyA8S6M .media-container-row {
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.cid-ri7lyA8S6M .media-container-row .foot-menu {
-  list-style: none;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  padding: 0;
-  margin-bottom: 0;
-}
-.cid-ri7lyA8S6M .media-container-row .foot-menu li {
-  padding: 0 1rem 1rem 1rem;
-}
-.cid-ri7lyA8S6M .media-container-row .foot-menu li p {
-  margin: 0;
-}
-.cid-ri7lyA8S6M .media-container-row .social-list {
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-  -webkit-justify-content: flex-end;
-}
-.cid-ri7lyA8S6M .media-container-row .social-list .mbr-iconfont-social {
-  font-size: 1.5rem;
-  color: #ffffff;
-}
-.cid-ri7lyA8S6M .media-container-row .social-list .soc-item {
-  margin: 0 .5rem;
-}
-.cid-ri7lyA8S6M .media-container-row .social-list a {
-  margin: 0;
-  opacity: .5;
-  -webkit-transition: .2s linear;
-  transition: .2s linear;
-}
-.cid-ri7lyA8S6M .media-container-row .social-list a:hover {
-  opacity: 1;
-}
-@media (max-width: 767px) {
-  .cid-ri7lyA8S6M .media-container-row .social-list {
-    justify-content: center;
-    -webkit-justify-content: center;
-  }
-}
-.cid-ri7lyA8S6M .media-container-row .row-copirayt {
-  word-break: break-word;
-  width: 100%;
-}
-.cid-ri7lyA8S6M .media-container-row .row-copirayt p {
-  width: 100%;
-}
-.cid-rO9LGfiykM {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #ffffff;
-}
-.cid-rO9LGfiykM .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-rO9E5GJ3AQ {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-.cid-rO9E5GJ3AQ .mbr-slider .carousel-control {
-  background: #1b1b1b;
-}
-.cid-rO9E5GJ3AQ .mbr-slider .carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-rO9E5GJ3AQ .mbr-slider .carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-rO9E5GJ3AQ .mbr-slider .modal-body .close {
-  background: #1b1b1b;
-}
-.cid-rO9E5GJ3AQ .mbr-gallery-item > div::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: #554346;
-  background: linear-gradient(to left, #554346, #45505b) !important;
-  opacity: 0;
-  -webkit-transition: 0.2s opacity ease-in-out;
-  transition: 0.2s opacity ease-in-out;
-}
-.cid-rO9E5GJ3AQ .mbr-gallery-item > div:hover .mbr-gallery-title::before {
-  background: transparent !important;
-}
-.cid-rO9E5GJ3AQ .mbr-gallery-item > div:hover:before {
-  opacity: 0.7 !important;
-}
-.cid-rO9E5GJ3AQ .mbr-gallery-title {
-  font-size: .9em;
-  position: absolute;
-  display: block;
-  width: 100%;
-  bottom: 0;
-  padding: 1rem;
-  color: #fff;
-  z-index: 2;
-}
-.cid-rO9E5GJ3AQ .mbr-gallery-title:before {
-  content: " ";
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  position: absolute;
-  background: #554346 !important;
-  background: linear-gradient(to left, #554346, #45505b) !important;
-  opacity: 0.7;
-  -webkit-transition: 0.2s background ease-in-out;
-  transition: 0.2s background ease-in-out;
 }
 .cid-rO9IfyyLXV {
   padding-top: 45px;
