--- a/curso/assets/mobirise/css/mbr-additional.css
+++ b/curso/assets/mobirise/css/mbr-additional.css
@@ -1239,268 +1239,6 @@ section.lazy-placeholder:after {
 .cid-qU8A7WgWjS .media-container-row .row-copirayt p {
   width: 100%;
 }
-.cid-rOagTAlnib {
-  padding-top: 45px;
-  padding-bottom: 90px;
-  background-color: #efefef;
-}
-.cid-rOagTAlnib .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-rOagTAlnib .mbr-text {
-  color: #767676;
-  text-align: center;
-}
-.cid-rOagTAlnib .card {
-  display: flex;
-  position: relative;
-  justify-content: center;
-}
-.cid-rOagTAlnib .card-wrapper {
-  height: 100%;
-  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
-  transition: box-shadow 0.3s;
-}
-.cid-rOagTAlnib .card-wrapper .card-img {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  overflow: hidden;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
-}
-.cid-rOagTAlnib .card-wrapper .card-img .mbr-overlay {
-  background-color: #efefef;
-  display: none;
-  transition: opacity .3s;
-}
-.cid-rOagTAlnib .card-wrapper .card-img .mbr-section-btn {
-  display: flex;
-  position: absolute;
-  transition: opacity .3s;
-  width: 100%;
-  margin: auto;
-  left: 0;
-  justify-content: center;
-  align-items: center;
-}
-.cid-rOagTAlnib .card-wrapper .card-img img {
-  width: 100%;
-  height: 100%;
-}
-.cid-rOagTAlnib .card-wrapper .card-box {
-  background-color: #ffffff;
-  padding: 0 2rem 2rem 2rem;
-  border-bottom-left-radius: 0;
-  border-bottom-right-radius: 0;
-}
-.cid-rOagTAlnib .card-wrapper .card-box h4 {
-  font-weight: 500;
-  margin-bottom: 0;
-  padding-top: 2rem;
-}
-.cid-rOagTAlnib .card-wrapper .card-box p {
-  margin-bottom: 0;
-  padding-top: 1.5rem;
-}
-.cid-rOagTAlnib .card-wrapper:hover {
-  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
-  transition: box-shadow 0.3s;
-}
-.cid-rOagTAlnib .popup-btn .mbr-overlay {
-  display: block !important;
-  opacity: 0;
-}
-.cid-rOagTAlnib .popup-btn .mbr-section-btn {
-  height: 100%;
-  display: flex !important;
-  opacity: 0;
-}
-.cid-rOagTAlnib .popup-btn:hover .mbr-overlay {
-  opacity: .5;
-}
-.cid-rOagTAlnib .popup-btn:hover .mbr-section-btn {
-  opacity: 1;
-}
-.cid-ri7ohx3Vin {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #efefef;
-}
-.cid-ri7ohx3Vin .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-ri7ohx3Vin .btn {
-  margin: 0 0 .5rem 0;
-}
-.cid-rO9IfyyLXV {
-  padding-top: 45px;
-  padding-bottom: 90px;
-  background-color: #efefef;
-}
-.cid-rO9IfyyLXV .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-rO9IfyyLXV .mbr-text {
-  color: #767676;
-  text-align: center;
-}
-.cid-rO9IfyyLXV .card {
-  display: flex;
-  position: relative;
-  justify-content: center;
-}
-.cid-rO9IfyyLXV .card-wrapper {
-  height: 100%;
-  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
-  transition: box-shadow 0.3s;
-}
-.cid-rO9IfyyLXV .card-wrapper .card-img {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  overflow: hidden;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
-}
-.cid-rO9IfyyLXV .card-wrapper .card-img .mbr-overlay {
-  background-color: #efefef;
-  display: none;
-  transition: opacity .3s;
-}
-.cid-rO9IfyyLXV .card-wrapper .card-img .mbr-section-btn {
-  display: flex;
-  position: absolute;
-  transition: opacity .3s;
-  width: 100%;
-  margin: auto;
-  left: 0;
-  justify-content: center;
-  align-items: center;
-}
-.cid-rO9IfyyLXV .card-wrapper .card-img img {
-  width: 100%;
-  height: 100%;
-}
-.cid-rO9IfyyLXV .card-wrapper .card-box {
-  background-color: #ffffff;
-  padding: 0 2rem 2rem 2rem;
-  border-bottom-left-radius: 0;
-  border-bottom-right-radius: 0;
-}
-.cid-rO9IfyyLXV .card-wrapper .card-box h4 {
-  font-weight: 500;
-  margin-bottom: 0;
-  padding-top: 2rem;
-}
-.cid-rO9IfyyLXV .card-wrapper .card-box p {
-  margin-bottom: 0;
-  padding-top: 1.5rem;
-}
-.cid-rO9IfyyLXV .card-wrapper:hover {
-  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
-  transition: box-shadow 0.3s;
-}
-.cid-rO9IfyyLXV .popup-btn .mbr-overlay {
-  display: block !important;
-  opacity: 0;
-}
-.cid-rO9IfyyLXV .popup-btn .mbr-section-btn {
-  height: 100%;
-  display: flex !important;
-  opacity: 0;
-}
-.cid-rO9IfyyLXV .popup-btn:hover .mbr-overlay {
-  opacity: .5;
-}
-.cid-rO9IfyyLXV .popup-btn:hover .mbr-section-btn {
-  opacity: 1;
-}
-.cid-ri7oLpli5f {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #ffffff;
-}
-.cid-ri7oLpli5f .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-ri7oLpli5f .btn {
-  margin: 0 0 .5rem 0;
-}
-.cid-ri7n7cB8vN {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: #2e2e2e;
-}
-.cid-ri7n7cB8vN .row-links {
-  width: 100%;
-  justify-content: center;
-}
-.cid-ri7n7cB8vN .social-row {
-  width: 100%;
-  justify-content: center;
-}
-.cid-ri7n7cB8vN .media-container-row {
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.cid-ri7n7cB8vN .media-container-row .foot-menu {
-  list-style: none;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  padding: 0;
-  margin-bottom: 0;
-}
-.cid-ri7n7cB8vN .media-container-row .foot-menu li {
-  padding: 0 1rem 1rem 1rem;
-}
-.cid-ri7n7cB8vN .media-container-row .foot-menu li p {
-  margin: 0;
-}
-.cid-ri7n7cB8vN .media-container-row .social-list {
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-  -webkit-justify-content: flex-end;
-}
-.cid-ri7n7cB8vN .media-container-row .social-list .mbr-iconfont-social {
-  font-size: 1.5rem;
-  color: #ffffff;
-}
-.cid-ri7n7cB8vN .media-container-row .social-list .soc-item {
-  margin: 0 .5rem;
-}
-.cid-ri7n7cB8vN .media-container-row .social-list a {
-  margin: 0;
-  opacity: .5;
-  -webkit-transition: .2s linear;
-  transition: .2s linear;
-}
-.cid-ri7n7cB8vN .media-container-row .social-list a:hover {
-  opacity: 1;
-}
-@media (max-width: 767px) {
-  .cid-ri7n7cB8vN .media-container-row .social-list {
-    justify-content: center;
-    -webkit-justify-content: center;
-  }
-}
-.cid-ri7n7cB8vN .media-container-row .row-copirayt {
-  word-break: break-word;
-  width: 100%;
-}
-.cid-ri7n7cB8vN .media-container-row .row-copirayt p {
-  width: 100%;
-}
 .cid-rFi4xBPPsV {
   padding-top: 45px;
   padding-bottom: 45px;
@@ -3021,5 +2759,350 @@ section.lazy-placeholder:after {
   width: 100%;
 }
 .cid-rUzTOkywfc .media-container-row .row-copirayt p {
+  width: 100%;
+}
+.cid-rO9IfyyLXV {
+  padding-top: 45px;
+  padding-bottom: 90px;
+  background-color: #efefef;
+}
+.cid-rO9IfyyLXV .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rO9IfyyLXV .mbr-text {
+  color: #767676;
+  text-align: center;
+}
+.cid-rO9IfyyLXV .card {
+  display: flex;
+  position: relative;
+  justify-content: center;
+}
+.cid-rO9IfyyLXV .card-wrapper {
+  height: 100%;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-rO9IfyyLXV .card-wrapper .card-img {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.cid-rO9IfyyLXV .card-wrapper .card-img .mbr-overlay {
+  background-color: #efefef;
+  display: none;
+  transition: opacity .3s;
+}
+.cid-rO9IfyyLXV .card-wrapper .card-img .mbr-section-btn {
+  display: flex;
+  position: absolute;
+  transition: opacity .3s;
+  width: 100%;
+  margin: auto;
+  left: 0;
+  justify-content: center;
+  align-items: center;
+}
+.cid-rO9IfyyLXV .card-wrapper .card-img img {
+  width: 100%;
+  height: 100%;
+}
+.cid-rO9IfyyLXV .card-wrapper .card-box {
+  background-color: #ffffff;
+  padding: 0 2rem 2rem 2rem;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.cid-rO9IfyyLXV .card-wrapper .card-box h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  padding-top: 2rem;
+}
+.cid-rO9IfyyLXV .card-wrapper .card-box p {
+  margin-bottom: 0;
+  padding-top: 1.5rem;
+}
+.cid-rO9IfyyLXV .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+.cid-rO9IfyyLXV .popup-btn .mbr-overlay {
+  display: block !important;
+  opacity: 0;
+}
+.cid-rO9IfyyLXV .popup-btn .mbr-section-btn {
+  height: 100%;
+  display: flex !important;
+  opacity: 0;
+}
+.cid-rO9IfyyLXV .popup-btn:hover .mbr-overlay {
+  opacity: .5;
+}
+.cid-rO9IfyyLXV .popup-btn:hover .mbr-section-btn {
+  opacity: 1;
+}
+.cid-ri7oLpli5f {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-ri7oLpli5f .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-ri7oLpli5f .btn {
+  margin: 0 0 .5rem 0;
+}
+.cid-ri7n7cB8vN {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #2e2e2e;
+}
+.cid-ri7n7cB8vN .row-links {
+  width: 100%;
+  justify-content: center;
+}
+.cid-ri7n7cB8vN .social-row {
+  width: 100%;
+  justify-content: center;
+}
+.cid-ri7n7cB8vN .media-container-row {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.cid-ri7n7cB8vN .media-container-row .foot-menu {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+}
+.cid-ri7n7cB8vN .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-ri7n7cB8vN .media-container-row .foot-menu li p {
+  margin: 0;
+}
+.cid-ri7n7cB8vN .media-container-row .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+}
+.cid-ri7n7cB8vN .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
+}
+.cid-ri7n7cB8vN .media-container-row .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-ri7n7cB8vN .media-container-row .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-ri7n7cB8vN .media-container-row .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-ri7n7cB8vN .media-container-row .social-list {
+    justify-content: center;
+    -webkit-justify-content: center;
+  }
+}
+.cid-ri7n7cB8vN .media-container-row .row-copirayt {
+  word-break: break-word;
+  width: 100%;
+}
+.cid-ri7n7cB8vN .media-container-row .row-copirayt p {
+  width: 100%;
+}
+.cid-rOagTAlnib {
+  padding-top: 45px;
+  padding-bottom: 90px;
+  background-color: #efefef;
+}
+.cid-rOagTAlnib .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rOagTAlnib .mbr-text {
+  color: #767676;
+  text-align: center;
+}
+.cid-rOagTAlnib .card {
+  display: flex;
+  position: relative;
+  justify-content: center;
+}
+.cid-rOagTAlnib .card-wrapper {
+  height: 100%;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-rOagTAlnib .card-wrapper .card-img {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.cid-rOagTAlnib .card-wrapper .card-img .mbr-overlay {
+  background-color: #efefef;
+  display: none;
+  transition: opacity .3s;
+}
+.cid-rOagTAlnib .card-wrapper .card-img .mbr-section-btn {
+  display: flex;
+  position: absolute;
+  transition: opacity .3s;
+  width: 100%;
+  margin: auto;
+  left: 0;
+  justify-content: center;
+  align-items: center;
+}
+.cid-rOagTAlnib .card-wrapper .card-img img {
+  width: 100%;
+  height: 100%;
+}
+.cid-rOagTAlnib .card-wrapper .card-box {
+  background-color: #ffffff;
+  padding: 0 2rem 2rem 2rem;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.cid-rOagTAlnib .card-wrapper .card-box h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  padding-top: 2rem;
+}
+.cid-rOagTAlnib .card-wrapper .card-box p {
+  margin-bottom: 0;
+  padding-top: 1.5rem;
+}
+.cid-rOagTAlnib .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+.cid-rOagTAlnib .popup-btn .mbr-overlay {
+  display: block !important;
+  opacity: 0;
+}
+.cid-rOagTAlnib .popup-btn .mbr-section-btn {
+  height: 100%;
+  display: flex !important;
+  opacity: 0;
+}
+.cid-rOagTAlnib .popup-btn:hover .mbr-overlay {
+  opacity: .5;
+}
+.cid-rOagTAlnib .popup-btn:hover .mbr-section-btn {
+  opacity: 1;
+}
+.cid-ri7ohx3Vin {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #efefef;
+}
+.cid-ri7ohx3Vin .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-ri7ohx3Vin .btn {
+  margin: 0 0 .5rem 0;
+}
+.cid-rVzK7PVIEZ {
+  padding-top: 60px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-rVzK7PVIEZ .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rVzK7QAvWr {
+  padding-top: 0px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-rVzK86h3pH {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #2e2e2e;
+}
+.cid-rVzK86h3pH .row-links {
+  width: 100%;
+  justify-content: center;
+}
+.cid-rVzK86h3pH .social-row {
+  width: 100%;
+  justify-content: center;
+}
+.cid-rVzK86h3pH .media-container-row {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.cid-rVzK86h3pH .media-container-row .foot-menu {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+}
+.cid-rVzK86h3pH .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-rVzK86h3pH .media-container-row .foot-menu li p {
+  margin: 0;
+}
+.cid-rVzK86h3pH .media-container-row .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+}
+.cid-rVzK86h3pH .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
+}
+.cid-rVzK86h3pH .media-container-row .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-rVzK86h3pH .media-container-row .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-rVzK86h3pH .media-container-row .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-rVzK86h3pH .media-container-row .social-list {
+    justify-content: center;
+    -webkit-justify-content: center;
+  }
+}
+.cid-rVzK86h3pH .media-container-row .row-copirayt {
+  word-break: break-word;
+  width: 100%;
+}
+.cid-rVzK86h3pH .media-container-row .row-copirayt p {
   width: 100%;
 }
